update-manager (1:0.87.4) hardy; urgency=low

  * UpdateManager/UpdateManager.py:
    - run the partial upgrader with error correction
      if the dependencies on the system are not ok
      (it will fix most problems)
  * DistUpgrade/DistUpgradeController.py, DistUpgradeCache.py:
    - if dpkg was interrupted, run "dpkg --configure -a" 
      automatically

 --

update-manager (1:0.87.3) hardy; urgency=low

  * add ports.ubuntu.com to the valid mirrors (LP: #184663)
  * add --proposed to the options for do-release-upgrade
    (LP: #109290)
  * fix crash in apport report duplicate checking

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Jan 2008 15:50:28 +0000

update-manager (1:0.87.2) hardy; urgency=low

  * DistUpgrade/DistUpgradeApport.py:
    - better detection for followup errors when a package failed
      earlier
  * DistUpgrade/DistUpgradeController.py:
    - Be more tolerant against errors in the initial apt-get update
      operation. We disable third party sources on the later 
      sources.list rewrite anyway

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Jan 2008 15:06:00 +0100

update-manager (1:0.87.1) hardy; urgency=low

  * UpdateManager/UpdateManager.py:
    - fix crash if /var/lib/apt/periodic/update-stamp does not exists
      (LP: #181390)
    - fix misleading string when cache is rebuild (LP: #179354)
  * DistUpgrade/DistUpgradeCache.py:
    - be more careful with the obsoletes checking and get not
      confused if the hardy version is older than the gutsy one
      (LP: #181201)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 09 Jan 2008 09:53:33 +0100

update-manager (1:0.87) hardy; urgency=low

  * typo fixes (thanks to Brian Murray, LP: #99513, LP: #158175)
  * fix incorrect textual description (thanks to Brian Murray, 
    LP: #145130)
  * support release-upgrades from dapper for architectures on
    ports.ubuntu.com
  * UpdateManager/UpdateManager.py:
    - remove the "from $version to $version" from the main 