@@ -7,6 +7,10 @@ update-manager (1:0.87.4) hardy; urgency=low
   * DistUpgrade/DistUpgradeController.py, DistUpgradeCache.py:
     - if dpkg was interrupted, run "dpkg --configure -a" 
       automatically
+    - if the prerequists can not be authenticated, 
+  * DistUpgradeView/DistUpgradeView.py:
+    - when calculating the download time in estimatedDownloadTime, 
+      use the average download speed so far (if available)
 
  --
 
